--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,35 @@
  *= require_tree .
  *= require_self
  */
+
+ body {
+  font-family: sans-serif;
+}
+
+.root {
+  width: 1040px;
+  margin: 80px auto 0 auto;
+  overflow-x: hidden;
+}
+
+button {
+  display: inline-block;
+  background-color: white;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  font-weight: bold;
+  color: #777;
+  padding: 0 21px;
+  min-height: 43px;
+  transition: all 0.3s ease;
+}
+
+button:hover {
+  background-color: #eee;
+  color: #333;
+  cursor: pointer;
+}
+
+button:active {
+  color: #aaa;
+}
