--- a/app/javascript/components/ProductDetail/ProductDetail.module.scss
+++ b/app/javascript/components/ProductDetail/ProductDetail.module.scss
@@ -26,7 +26,7 @@
       color: #777;
       overflow-x: hidden;
       white-space: nowrap;
-      max-width: 836px;
+      max-width: calc(100% - 204px);
       text-overflow: ellipsis;
       b {
         color: black;
