--- a/app/javascript/components/ProductDetail/ProductDetail.module.scss
+++ b/app/javascript/components/ProductDetail/ProductDetail.module.scss
@@ -1,11 +1,4 @@
 :local {
-  .stars {
-    display: inline-block;
-    width: 170px;
-    height: 36px;
-    background-color: palegreen;
-  }
-
   .topContent {
     display: flex;
     justify-content: space-between;
@@ -53,7 +46,24 @@
     }
   }
 
+  .modalHeader {
+    transform: translateY(-2rem);
+    text-align: right;
+
+    button {
+      transform: translateX(2rem);
+      border: none;
+      padding: 0 10px;
+      &:hover {
+        background: unset;
+      }
+    }
+  }
+
   .ratingModal {
+    h1 {
+      margin-top: 0;
+    }
     .stars {
       transform: translateX(-10px);
     }
@@ -63,12 +73,16 @@
       outline: none;
       width: 100%;
     }
-    .error {
-      visibility: hidden;
-      font-size: smaller;
-      font-weight: bold;
-      color: crimson;
-      transform: translateY(-9px);
-    }
+  }
+
+  .hidden {
+    visibility: hidden;
+  }
+
+  .formError {
+    font-size: smaller;
+    font-weight: bold;
+    color: crimson;
+    transform: translateY(-9px);
   }
 }
